# jvm

./: CMakeLists.txt  README.md  TestClass.java  build_linux.sh  clean_build.sh
src/: CMakeLists.txt  main.cpp
src/classloader/: class_loader.cpp  class_loader.h
src/execution/: interpreter.cpp  interpreter.h
src/native/: native_interface.cpp  native_interface.h
src/runtime/: runtime_data.cpp  runtime_data.h
